--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -17,14 +17,18 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="ch.eth.soms.mosgap.nervous.MainActivity"
-            android:label="@string/app_name" 
+            android:label="@string/app_name"
             android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
-        <service android:enabled="true" android:name="ch.eth.soms.mosgap.nervous.SensorService"/>
+        <service
+            android:name="ch.eth.soms.mosgap.nervous.SensorService"
+            android:enabled="true" />
     </application>
+
 </manifest>
